added assets and hero sections

--- a/index.html
+++ b/index.html
@@ -2,26 +2,36 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<title>Here is my Title</title>
 </head>
 <body>
 
-
-
 <section id="header">
-	<div id="header-grid">
-		<div id="logo-wrapper"><img src="logoimg01.png"></div>
-		<div id="nav-wrapper"></div>
-	</div>
-</div>
-
+	<grid id="header-grid">
+		<div id="logo-wrapper">Fake Logo</div>
+		<div id="nav-wrapper">
+			<a href="#"><div id="contact-link-wrapper" class="right">CALL TODAY! (123) 456-7890</div></a>
+			<a href="#"><div id="contact-link-wrapper" class="right">admin@example.com</div></a>
+		</div>
+	</grid>
+</section>
 <section id="hero">
-	<div id="hero-text-wrapper">
-		<h1>Welcome to my Page!</h1>
+	<div id="hero-wrapper">
+		<h1 class="text-size-x8 gold-text">GO <span id="white-underline">SOLAR</span><br>OR GO HOME.</h1>
+		<p class="hero">It's time to increase the value of your home while supporting the environment using clean energy.</p>
+			<a href="#" class="button hero01">Find Out How</a>
+			<a href="#" class="button hero02">Get a FREE Quote!</a>
 	</div>
+</section>
+
+<div id="title">
+	<h2 class="title-text">Why Choose Solar?</h2>
 </div>
 
+<section id="features">
+	<grid id="features-grid"></grid>
+</section>
 
 </body>
 </html>
