--- a/index.html
+++ b/index.html
@@ -20,16 +20,23 @@
 	<div id="hero-wrapper">
 		<h1 class="text-size-x8 gold-text">GO <span id="white-underline">SOLAR</span><br>OR GO HOME.</h1>
 		<p class="hero">It's time to increase the value of your home while supporting the environment using clean energy.</p>
-			<a href="#" class="button hero01">Find Out How</a>
-			<a href="#" class="button hero02">Get a FREE Quote!</a>
+		
+		<div class="flex-container-horiz">
+			<form action="mailto:mryden0214@gmail.com" method="POST">
+				<input type="email" id="email-address" name="Email Address" placeholder="example@example.com" class="field">
+				<input type="submit" value="Get Your FREE Quote!" class="submit-button button">
+			</form>
+		</div>	
+		
+		<!-- <a href="#" class="button hero01">Find Out How</a> -->
+		<!-- <a href="#" class="button hero02">Get a FREE Quote!</a> -->
 	</div>
 </section>
 
-<div id="title">
-	<h2 class="title-text">Why Choose Solar?</h2>
-</div>
-
 <section id="features">
+	<div id="title">
+		<h2 class="title-text">Why Choose Solar?</h2>
+	</div>
 	<grid id="features-grid"></grid>
 </section>
 
